<resources>
    <string name="app_name">Play Hub</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="smiley">😀</string>
    <string name="sad_smiley">😞</string>
    <string name="flag">🚩</string>
    <string name="bomb">💣</string>
    <string name="default_count">0000</string>
    <string name="congratulation">Congratulations !</string>
    <string name="enter_mines">Enter Mines</string>
    <string name="enter_height">Enter Height</string>
    <string name="submit">Submit</string>
    <string name="enter_width">Enter Width</string>
    <string name="mine">Mine</string>
    <string name="time">Time</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="custom_board">Custom Board</string>
    <string name="hard">Hard</string>
    <string name="best_time">"Best Time : "</string>
    <string name="last_game_time">Last Game Time :</string>
    <string name="minesweeper">mineSweeper</string>
</resources>