<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purple_500"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/pink_button_bg"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:text="@string/easy"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintBottom_toTopOf="@+id/btnMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastTime"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/purple_button_bg"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/medium"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintBottom_toTopOf="@+id/btnHard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEasy" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hard"
        android:background="@drawable/pink_button_bg"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintBottom_toTopOf="@+id/btnCustomBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMedium" />

    <ImageView
        android:id="@+id/tvMineSweeper"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/mine_sweeper_logo"
        android:contentDescription="@string/minesweeper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCustomBoard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/custom_board"
        android:background="@drawable/purple_button_bg"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHard" />

    <TextView
        android:id="@+id/tvBestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintBottom_toTopOf="@+id/tvLastTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMineSweeper"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text=" Best Time : 0s" />

    <TextView
        android:id="@+id/tvLastTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        android:layout_marginBottom="18dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBestTime"
        tools:text="Last Game Time : 0s" />
</androidx.constraintlayout.widget.ConstraintLayout>